--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "HOST=0.0.0.0 PORT=3000 BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
