setup git pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
+  "homepage": "https://snotor-artem-horevyi.github.io/career-questionnaire-test-app/",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
@@ -39,6 +40,5 @@
     "gh-pages": "^6.1.1",
     "prettier": "3.2.4",
     "tailwindcss": "^3.4.0"
-  },
-  "homepage": "/"
+  }
 }
