--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
-  "homepage": "https://snotor-artem-horevyi.github.io/career-questionnaire-test-app/",
+  "homepage": "https://snotor-artem-horevyi.github.io/",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
